# AIChatSDK

./: .gitignore  README.md
chatServer/: CMakeLists.txt  chatServer.cpp  chatServer.h  main.cpp
chatServer/www/: index.html
chatServer/www/css/: style.css
chatServer/www/js/: api.js  chat.js  main.js  session.js  ui.js
chatsdk/: CMakeLists.txt
chatsdk/include/: ChatGPTProvider.h  DeepSeekProvider.h  GeminiProvider.h  ILLMProvider.h  LLMManager.h  OllamaDeepSeekProvider.h  chat_sdk.h  common.h  dataManager.h  session_manager.h
chatsdk/include/util/: my_logger.h
chatsdk/src/: ChatGPTProvider.cpp  DataManager.cpp  DeepSeekProvider.cpp  GeminiProvider.cpp  LLMManager.cpp  OllamaDeepSeekProvider.cpp  chat_sdk.cpp  session_manager.cpp
chatsdk/src/util/: my_logger.cpp
test/: CMakeLists.txt  testLLM.cpp
